Cloud test version

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -378,94 +378,96 @@
 
       </main>
       <!-- main-area-end -->
-
-      <footer>
-         <div class="footer-area pt-105">
-            <div class="tp-footer-top pb-25">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-lg-4 col-md-6">
-                        <div class="tp-footer-widget footer-2-col-1 mb-40 wow fadeInUp" data-wow-delay=".2s">
-                           <div class="tp-footer-widget__content mb-95">
-                              <i>FEEL FREE TO CONTACT US</i>
-                              <h4 class="tp-footer-widget__contact mb-20"><a href="tel:61383766284">+91 99887 76655</a></h4>
-                              <a href="mailto:noreply@envato.com">info@sunmasgroups.com</a>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="tp-footer-widget footer-2-col-2 mb-40 wow fadeInUp" data-wow-delay=".4s">
-                           <span class="tp-footer-widget__title mb-15">Useful links</span>
-                           <div class="tp-footer-widget__links mb-35">
-                              <ul>
-                                 <li><a href="contact.html">About us</a></li>
-                                 <li><a href="about.html">Services</a></li>
-                                 <li><a href="shop-details.html">Blog</a></li>
-                                 <li><a href="#">Careers</a></li>
-                                 <li><a href="services-details.html">Contact Us</a></li>
-                              </ul>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-lg-2 col-md-6">
-                        <div class="tp-footer-widget footer-2-col-3 mb-40 wow fadeInUp" data-wow-delay=".6s">
-                           <span class="tp-footer-widget__title mb-15">Services</span>
-                           <div class="tp-footer-widget__links">
-                              <ul>
-                                 <li><a href="#">Seawarage</a></li>
-                                 <li><a href="#">Industrial</a></li>
-                                 <li><a href="#">Municipal</a></li>
-                              </ul>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-lg-3 col-md-6">
-                        <div class="tp-footer-widget footer-2-col-4 mb-40 wow fadeInUp" data-wow-delay=".8s">
-                           <span class="tp-footer-widget__title mb-15">Contact Info</span>
-                           <div class="tp-footer-widget__links mb-120">
-                              <ul>
-                                 <li>lorem Ipsum </li>
-                                 <li><a href="tel:(+880)15569569365">+91 99887 76655</a></li>
-                                 <li><a href="mailto:support@rstheme.com">info@sunmasgroups.com</a></li>
-                                 <li>Office Hours: 8AM - 11PM</li>
-                                 <li>Sunday - Wekend Day</li>
-                              </ul>
-                           </div>
-                           <div class="tp-footer-widget__social fw-social">
-                              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                              <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                              <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                              <a href="#"><i class="fa-light fa-basketball"></i></a>
-                              <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                           </div>
+   <!-- footer-area -->
+   <footer>
+      <div class="footer-area pt-105">
+         <div class="tp-footer-top pb-25">
+            <div class="container">
+               <div class="row">
+                  <div class="col-lg-4 col-md-6">
+                     <div class="tp-footer-widget footer-2-col-1 mb-40 wow fadeInUp" data-wow-delay=".2s">
+                        <div class="tp-footer-widget__content mb-95">
+                           <i>FEEL FREE TO CONTACT US</i>
+                           <h4 class="tp-footer-widget__contact mb-20"><a href="tel:61383766284">+91 99887 76655</a>
+                           </h4>
+                           <a href="mailto:noreply@envato.com">info@sunmasgroups.com</a>
                         </div>
                      </div>
                   </div>
-               </div>
-            </div>
-            <div class="footer-area-bottom fw-border">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-xl-6 col-lg-6 col-md-12 col-12">
-                        <div class="footer-widget__copyright copyright-white">
-                           <span> © Copyright ©2023<a href="index.html"> Sunmas Technologies</a>. <i>All Rights Reserved</i></span>
-                        </div>
-                     </div> 
-                     <div class="col-xl-6 col-lg-6 col-md-12 col-12">
-                        <div class="footer-widget__copyright-info info-direction">
-                           <ul class="d-flex align-items-center">
-                              <li><a href="#">Terms and conditions</a></li>
-                              <li><a href="#">Privacy policy</a></li>
-                              <li><a href="#">Quotation</a></li>
+                  <div class="col-lg-3 col-md-6">
+                     <div class="tp-footer-widget footer-2-col-2 mb-40 wow fadeInUp" data-wow-delay=".4s">
+                        <span class="tp-footer-widget__title mb-15">Useful links</span>
+                        <div class="tp-footer-widget__links mb-35">
+                           <ul>
+                              <li><a href="contact.html">About us</a></li>
+                              <li><a href="about.html">Services</a></li>
+                              <li><a href="shop-details.html">Blog</a></li>
+                              <li><a href="#">Careers</a></li>
+                              <li><a href="services-details.html">Contact Us</a></li>
                            </ul>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6">
+                     <div class="tp-footer-widget footer-2-col-3 mb-40 wow fadeInUp" data-wow-delay=".6s">
+                        <span class="tp-footer-widget__title mb-15">Services</span>
+                        <div class="tp-footer-widget__links">
+                           <ul>
+                              <li><a href="#">Seawarage</a></li>
+                              <li><a href="#">Industrial</a></li>
+                              <li><a href="#">Municipal</a></li>
+                           </ul>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6">
+                     <div class="tp-footer-widget footer-2-col-4 mb-40 wow fadeInUp" data-wow-delay=".8s">
+                        <span class="tp-footer-widget__title mb-15">Contact Info</span>
+                        <div class="tp-footer-widget__links mb-120">
+                           <ul>
+                              <li><%= contactData.title %></li>
+                              <li><a href="tel:(+880)15569569365"><%= contactData.number %></a></li>
+                              <li><a href="mailto:support@rstheme.com"><%= contactData.website %></a></li>
+                              <li><%= contactData.timing %></li>
+                              <li><%= contactData.days %></li>
+                           </ul>
+                        </div>
+                        <div class="tp-footer-widget__social fw-social">
+                           <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                           <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                           <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                           <a href="#"><i class="fa-light fa-basketball"></i></a>
+                           <a href="#"><i class="fa-brands fa-youtube"></i></a>
                         </div>
                      </div>
                   </div>
                </div>
             </div>
          </div>
-      </footer>
-      <!-- footer-area-end -->
+         <div class="footer-area-bottom fw-border">
+            <div class="container">
+               <div class="row">
+                  <div class="col-xl-6 col-lg-6 col-md-12 col-12">
+                     <div class="footer-widget__copyright copyright-white">
+                        <span> © Copyright ©2023<a href="index.html"> Sunmas Technologies</a>. <i>All Rights
+                              Reserved</i></span>
+                     </div>
+                  </div>
+                  <div class="col-xl-6 col-lg-6 col-md-12 col-12">
+                     <div class="footer-widget__copyright-info info-direction">
+                        <ul class="d-flex align-items-center">
+                           <li><a href="#">Terms and conditions</a></li>
+                           <li><a href="#">Privacy policy</a></li>
+                           <li><a href="#">Quotation</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </footer>
+   <!-- footer-area-end -->
 
       <!-- JS here -->
       <script src="assets/js/jquery.js"></script>
